# Recipe_Management_API

./: README.md  pyproject.toml
backend(Fastapi)/: .coverage  coverage.json  main.py  main2.py  model.py  pyproject.toml
backend(Fastapi)/.github/workflows/: tests.yml
backend(Fastapi)/app/: main.py  models.py  test_recipe.py  test_routes.py
backend(Fastapi)/app/databases/: ingredient_database.py
backend(Fastapi)/app/routers/: ingredient.py  nutritional_info.py  recipe.py
backend(Fastapi)/app/services/: ingredient_service.py  nutritional_info_service.py  recipe_service.py
backend(Fastapi)/app/tests/: test_ingredient.py  test_main.py  test_nutritional_info.py  test_recipe.py
frontend(react)/: package-lock.json  package.json  tailwind.config.js
frontend(react)/src/: App.jsx  index.css
frontend(react)/src/components/: Navbar.jsx  RecipeCard.jsx  RecipeForm.jsx  RecipeList.jsx  RecipeView.jsx  SearchBar.jsx
