[tool.poetry]
name = "recipe-management-api"
version = "0.1.0"
description = ""
authors = ["el-collins <charlescollins476@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
requests = "^2.31.0"
pytest = "^8.1.1"
httpx = "^0.27.0"
motor = "^3.4.0"
python-dotenv = "^1.0.1"
coverage = "^7.4.4"
pytest-cov = "^5.0.0"
uvicorn = "^0.29.0"
pytest-asyncio = "^0.23.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
